--- a/product.css
+++ b/product.css
@@ -88,6 +88,40 @@ tr:hover {
      background-color: lightgray;
 }
 
+
+/*Fieldset*/
+fieldset {
+     border: none;
+     display: block;
+
+}
+
+legend {
+     border-bottom: 1px solid rgb(203, 194, 194);
+     font-size: large;
+     font-weight: bold;
+
+}
+
+button {
+     background-color: lightgreen;
+     color: white;
+     padding: 10px;
+}
+
+input {
+     
+}
+
+form {
+     display: block;
+     width: 200px;
+     margin-left: auto;
+     margin-right: auto;
+     border: 1px solid grey;
+     border-radius: 12px;
+}
+
 footer {
      background-color: lightgray;
      text-align: center;
