--- a/product.css
+++ b/product.css
@@ -1,25 +1,23 @@
-
+body {
+     margin: 0;
+}
 
 header {
      background-image: url(https://edube.org/uploads/media/default/0001/04/products_image.jpg);
      position: fixed;
-     width: 1000px;
+     width: 100%;
+     top:0;
 }
 
-/*
+
 h1 {
       text-align: center;
     padding: 50px;
     font-weight: bold;
 }
-*/
-
-main {
 
 
-     
 
-}
 
 .img-div{
      position: relative;
@@ -33,9 +31,8 @@ img {
 .hero {
      border: 2px solid black;
      border-radius: 20px;
-     width: 350px;
+     width: 330px;
      margin-left: 15px;
-     position: ;
      box-shadow: 2px 2px 13px;
 }
 
@@ -49,12 +46,15 @@ img {
      left: 20px;
 }
 
-[class*=text] {
+
+[class*="text"] {
      width: 300px;
-     padding: 20px;
-     margin-top: 0px;
-     position: relative;
+     margin-bottom: 30px;
+     margin-left: auto;
+     top: 10px;
+     bottom: 10px;
 }
+
 
 
 /*Table*/
@@ -62,7 +62,7 @@ table, td {
      border: 1px solid rgb(220, 216, 216);
      border-collapse: collapse;
      width: 1200px;
-     margin: 20px;
+     margin: 20px 20px 50px 20px;
      height: 40px;
 }
 
@@ -89,7 +89,7 @@ tr:hover {
 }
 
 
-/*Fieldset*/
+/*Form and Fieldset*/
 fieldset {
      border: none;
      display: block;
@@ -100,30 +100,63 @@ legend {
      border-bottom: 1px solid rgb(203, 194, 194);
      font-size: large;
      font-weight: bold;
-
+     margin-bottom: 20px;
 }
 
 button {
      background-color: lightgreen;
      color: white;
      padding: 10px;
+     border: none;
+     margin-top: 10px;
+     width: 90px;
+}
+
+button:hover {
+     background-color: rgb(128, 210, 128);
+    
 }
 
 input {
-     
+     width: 250px;
+     margin-bottom: 20px;
+     margin-top: 5px;
+     padding: 8px;
+     border: 1px solid black;
+     outline: 1px solid black;
 }
+
+
 
 form {
      display: block;
-     width: 200px;
+     width: 300px;
      margin-left: auto;
      margin-right: auto;
-     border: 1px solid grey;
+     border: 1px solid rgb(212, 209, 209);
      border-radius: 12px;
+     padding: 30px 10px 17px 10px;
+     margin-bottom: 60px;
 }
 
 footer {
-     background-color: lightgray;
+     background-color: lightgrey;
+     width: 100%;
+     position: fixed;
+     bottom: 0;
+     height: 50px;
+
+}
+
+
+p {
      text-align: center;
-     padding: 50px;
-     height: ;
+     padding: 10px;
+}
+
+
+body:hover: {
+     background-color: black;
+     color: white;
+     transition: 0.4s;
+}
