--- a/product.css
+++ b/product.css
@@ -29,11 +29,10 @@ h1 {
 [class*="hero"] {
      border: 2px solid black;
      width: 350px;
+     height: 450px;
      margin-left: 20px;
      margin-top: 120px;
      border-radius: 30px;
-     background-color: black;
-     color: white;
 }
 
 [class*="img-div"] {
@@ -60,11 +59,11 @@ img {
      width: 300px;
      border-radius: 10px;
      border: 1px white solid;
+     height: 300px;
 }
 
 [class*="text"] {
      width: 300px;
-     
 }
 
 h2 {
@@ -73,7 +72,7 @@ h2 {
 
 [class*="text-p"] {
      font-size: small;
-     margin-right: 0;
+
 }
 
 /*footer*/
