--- a/product.css
+++ b/product.css
@@ -110,20 +110,35 @@ th {
 }
 
 form {
-     width: 200px;
+     width: 230px;
      margin-left: auto;
      margin-right: auto;
      border: 1px solid lightgray;
+     padding: 20px;
+     height: 260px;
+     border-radius: 12px;
 }
 
 fieldset {
      border: none;
 }
 
+input {
+     width: 200px;
+     height: 25px;
+     margin-bottom: 30px;
+     margin-top: 5px;
+     border: 1px solid black;
+     outline: 1px solid black;
+     padding: 5px;
+}
+
 legend {
      border-bottom: 1px solid rgb(176, 173, 173);
      font-weight: bold;
-
+     margin-bottom: 20px;
+     margin-top: 15px;
+     font-size: x-large;
 }
 
 button {
@@ -132,6 +147,8 @@ button {
      padding: 10px;
      width: 100px;
      color: white;
+     margin-bottom: 10px;
+     margin-top: 6px;
 }
 
 button:hover {
