--- a/product.css
+++ b/product.css
@@ -33,7 +33,7 @@ header {
 h1 {
      font-size: 40px;
      text-align: center;
-     color: rgba(69, 3, 300, 100);
+     color: white;
      font-weight: bold;
 
 }
