--- a/product.css
+++ b/product.css
@@ -29,7 +29,8 @@ h1 {
      border: 2px solid black;
      width: 350px;
      height: 450px;
-     margin-left: 20px;
+     margin-left: auto;
+     margin-right: auto;
      margin-top: 150px;
      border-radius: 30px;
      margin-bottom: 100px;
