--- a/css/product.css
+++ b/css/product.css
@@ -24,7 +24,6 @@ header .header-h1 {
 /*Main*/
 .main-details {
   margin-top: 150px;
-  position: relative;
 }
 .main-details .img {
   width: 250px;
@@ -32,6 +31,7 @@ header .header-h1 {
   margin-top: 10px;
   border-radius: 10px;
   margin-left: 25px;
+  position: relative;
 }
 .main-details .hero {
   border: 2px solid black;
@@ -39,6 +39,87 @@ header .header-h1 {
   margin-left: 30px;
   border-radius: 10px;
   padding: 10px;
+}
+.main-details .text {
+  padding: 1rem;
+}
+.main-details .text h2 {
+  text-decoration: underline red;
+}
+
+span {
+  color: white;
+  background-color: red;
+  padding: 10px;
+  border-radius: 10px;
+  position: absolute;
+  top: 12em;
+  left: 5rem;
+}
+
+.table {
+  margin-top: 3rem;
+}
+
+table,
+tr,
+td {
+  border: 1px rgb(190, 189, 189) solid;
+  border-collapse: collapse;
+  width: 50rem;
+  margin: 0 auto;
+}
+table td,
+tr td,
+td td {
+  padding: 8px;
+}
+table th,
+tr th,
+td th {
+  border-left: 1px rgb(190, 189, 189) solid;
+  padding: 8px;
+}
+table .gray-row,
+tr .gray-row,
+td .gray-row {
+  background-color: lightgrey;
+}
+table tr:hover,
+tr tr:hover,
+td tr:hover {
+  background-color: rgb(148, 146, 146);
+  transition: ease-in 0, 3ms;
+}
+
+.message-div {
+  margin-top: 13rem;
+  margin-bottom: 13rem;
+}
+.message-div fieldset {
+  border: none;
+  width: 3rem;
+  margin: auto;
+}
+.message-div fieldset legend {
+  border-bottom: 1px lightgrey solid;
+  font-weight: bold;
+  margin-bottom: 2em;
+}
+.message-div fieldset label {
+  font-weight: bold;
+}
+.message-div fieldset input, .message-div fieldset textarea {
+  border: lightgrey 1px solid;
+  outline: lightgrey 1px solid;
+  width: 15rem;
+  border-radius: 0.2rem;
+  height: 2em;
+  margin-bottom: 1em;
+  margin-top: 0.4em;
+}
+.message-div fieldset textarea {
+  height: 8em;
 }
 
 /*Footer*/
@@ -53,4 +134,5 @@ footer {
 footer .footer-paragraph {
   color: white;
   text-align: center;
+  font-weight: bold;
 }
